Ensure the console does not spill onto the header

--- a/client/style.css
+++ b/client/style.css
@@ -227,6 +227,7 @@ button {
 
 .console {
     outline: none;
+    position : relative;
 }
 
 .console-canvas {
